--- a/stylus_lib/typography.styl
+++ b/stylus_lib/typography.styl
@@ -10,3 +10,10 @@ avant-garde()
 garamond()
   font-family 'Adobe Garamond W08', 'adobe-garamond-pro', 'AGaramondPro-Regular', 'Times New Roman', 'Times', 'serif'
   font-smoothing antialiased
+
+faux-underline(color=#333333, x=1px, y=5px)
+  text-decoration none
+  background-image linear-gradient(top, transparent 0, color 1px, transparent 0)
+  background-size x y
+  background-repeat repeat-x
+  background-position bottom
